--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,5 +33,6 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      # run tests!
+      # run tests and coverage!
       - run: yarn test
+      - run: yarn coverage
